force-app/main/default/objects/BTN_Contract__c/fields/ContractLength__c.field-meta.xml
<CustomField>
    <fullName>ContractLength__c</fullName>
    <inlineHelpText>Np. określony na rok</inlineHelpText>
    <label>Contract Length</label>
    <length>255</length>
    <type>Text</type>
</CustomField>