force-app/main/default/objects/BTN_Contract__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>