force-app/main/default/objects/BTN_Contract__c/fields/NoticePeriod__c.field-meta.xml
<CustomField>
    <fullName>NoticePeriod__c</fullName>
    <inlineHelpText>Standardowo przy B2B powinien być 2 mies.</inlineHelpText>
    <label>Notice Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Od zaraz</fullName>
            </value>
            <value>
                <fullName>3 dni robocze</fullName>
            </value>
            <value>
                <fullName>2 tygodnie</fullName>
            </value>
            <value>
                <fullName>1 miesiąc</fullName>
            </value>
            <value>
                <fullName>2 miesiące</fullName>
            </value>
            <value>
                <fullName>3 miesiące</fullName>
            </value>
            <value>
                <fullName>Inne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>