force-app/main/default/objects/BTN_Contract__c/fields/NoticePeriodComment__c.field-meta.xml
<CustomField>
    <fullName>NoticePeriodComment__c</fullName>
    <label>Notice Period Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>