force-app/main/default/objects/BTN_Contract__c/fields/Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>Responsibilities__c</fullName>
    <label>Responsibilities</label>
    <type>TextArea</type>
</CustomField>