force-app/main/default/objects/BTN_Contract__c/fields/SalaryB2B_frm__c.field-meta.xml
<CustomField>
    <fullName>SalaryB2B_frm__c</fullName>
    <formula>IF (
  OR(Contact__r.Leader__c == $User.ContactId, Contact__c == $User.ContactId),
  SalaryB2B__c,
  NULL
)</formula>
    <label>Salary B2B</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>