force-app/main/default/objects/BTN_Contract__c/fields/SalaryUoP_frm__c.field-meta.xml
<CustomField>
    <fullName>SalaryUoP_frm__c</fullName>
    <formula>IF (
  OR(Contact__r.Leader__c == $User.ContactId, Contact__c == $User.ContactId),
  SalaryUoP__c,
  NULL
)</formula>
    <label>Salary UoP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>