force-app/main/default/objects/BTN_Contract__c/fields/StartDateComment__c.field-meta.xml
<CustomField>
    <fullName>StartDateComment__c</fullName>
    <label>Start Date Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>