force-app/main/default/objects/BTN_Contract__c/recordTypes/LoyaltyAgreement.recordType-meta.xml
<RecordType>
    <fullName>LoyaltyAgreement</fullName>
    <active>true</active>
    <label>Loyalty Agreement</label>
</RecordType>